# OpenQuant

./: .gitignore  Makefile  README.md  docker-compose.yml  pyproject.toml
apps/: __init__.py
apps/api/api/: main.py
apps/api_service/api_service/: deps.py  main.py
apps/llm/llm/: main.py
apps/llm_service/llm_service/: main.py
apps/research/research/: __init__.py  main.py
apps/research_worker/research_worker/: main.py
apps/scheduler/scheduler/: __init__.py  main.py
apps/scheduler_service/scheduler_service/: main.py
apps/trading/trading/: __init__.py  main.py
apps/trading_worker/trading_worker/: main.py
apps/web_app/: package.json
deployments/docker/: openquant-api.Dockerfile
docs/: api-spec.md  architecture-and-templates.zh-CN.md  architecture.md  deployment.md  development-log.md  domain-model.md  github-upload.md  trading-flow.md  workflow.md
tests/integration/datahub/: test_phase_d_datahub.py
tests/integration/datastore/: test_datastore_phase_c.py
tests/integration/task_engine/: test_phase_h_task_engine.py
tests/unit/: test_smoke.py
tests/unit/analysis_engine/: test_phase_f_analysis_engine.py
tests/unit/api_service/: test_phase_g_api_service.py  test_smoke.py
tests/unit/core/: test_exceptions.py  test_logger.py  test_settings.py
tests/unit/datastore/: test_repository_contracts.py
tests/unit/domain/: test_domain_invariants.py  test_phase_b_entities_and_services.py  test_rebalance_service.py  test_task_log.py  test_task_record.py  test_value_objects.py
tests/unit/factor_engine/: test_phase_e_factor_engine.py  test_smoke.py
(+16 files in other folders)
